--- a/src/main/resources/templates/updateReservation.html
+++ b/src/main/resources/templates/updateReservation.html
@@ -5,7 +5,7 @@
     <title>Zmiana Rezerwacji</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 
 <div class="container">
     <form th:action="@{/updateReservation}" th:object="${reservationDTO}" method="post">
