--- a/src/main/resources/templates/addCinema.html
+++ b/src/main/resources/templates/addCinema.html
@@ -5,7 +5,7 @@
     <title>Dodaj Kino</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 <div class="container">
     <form th:action="@{/addCinema}" th:object="${cinema}" method="post">
         <div>
