--- a/src/main/resources/templates/addMovie.html
+++ b/src/main/resources/templates/addMovie.html
@@ -5,7 +5,7 @@
     <title>Dodaj film</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 <div class="container">
 
         <form th:action="@{/addMovie}" th:object="${movie}" method="post">
