--- a/src/main/resources/templates/addReservation.html
+++ b/src/main/resources/templates/addReservation.html
@@ -5,7 +5,7 @@
     <title>Dodaj Rezerwacje</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 <div class="container">
     <form th:action="@{/addReservation}" th:object="${reservationDTO}" method="post">
         <div>
