--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -3,19 +3,34 @@
 <head th:fragment="links">
     <meta charset="UTF-8">
     <title>Strona filmowa</title>
+
+    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 
-<header th:fragment="header">
-    <div class="container">
-        <!--<div id="branding">-->
-            <!--<h1>Logo picture</h1>-->
-        <!--</div>-->
-        <nav>
-            <ul>
-                <li><a th:href="@{/addMovie}">Dodaj Film</a></li>
-                <li><a th:href="@{/movieList}">Lista Filmow</a></li>
+<!--<header th:fragment="header">-->
+    <!--<div class="container">-->
+
+        <nav th:fragment="header" class="navbar navbar-inverse">
+            <div class="container-fluid">
+            <ul class="nav navbar-nav">
+                <li class="active">
+                    <a class="red-link-home" th:href="@{/}">Home</a>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Film
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a th:href="@{/addMovie}">Dodaj Film</a></li>
+                        <li><a th:href="@{/movieList}">Lista Filmow</a></li>
+                    </ul>
+                </li>
                 <li><a th:href="@{/addCinema}">Dodaj Kino</a></li>
                 <li><a th:href="@{/cinemaList}">Lista Kin</a></li>
                 <li><a th:href="@{/addFilmShow}">Dodaj Seans</a></li>
@@ -24,9 +39,10 @@
                 <li><a th:href="@{/reservationList}">Lista Rezerwacji</a></li>
                 <!--<li><a href="#">Zaloguj</a></li>-->
             </ul>
+            </div>
         </nav>
-    </div>
-</header>
+    <!--</div>-->
+<!--</header>-->
 
 <section id="main">
     <div class="container">
