--- a/src/main/resources/templates/movieList.html
+++ b/src/main/resources/templates/movieList.html
@@ -5,7 +5,7 @@
     <title>Lista filmow</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 <div class="container">
 <table>
     <tr>
