--- a/src/main/resources/templates/reservationList.html
+++ b/src/main/resources/templates/reservationList.html
@@ -5,7 +5,7 @@
     <title>Lista Rezerwacji</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 
 <div class="container">
 <table>
