--- a/src/main/resources/templates/updateFilmShow.html
+++ b/src/main/resources/templates/updateFilmShow.html
@@ -5,7 +5,7 @@
     <title>Dodaj Seans</title>
 </head>
 <body>
-<header th:replace="mainPage :: header"></header>
+<div th:replace="mainPage :: header"></div>
 <div class="container">
     <form th:action="@{/updateFilmShow}" th:object="${filmShowDTO}" method="post">
         <input th:value="*{filmShowId}" th:field="*{filmShowId}" hidden>
