--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -11,7 +11,46 @@ body{
     margin: auto;
     overflow: hidden;
 }
+/* Navigation test */
+.nav ul{
+    background-color: #5e5d5d;
+    color: #d8d8d8;
+}
 
+.nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 5px 25px;
+    position: relative;
+    text-transform: uppercase;
+}
+
+.nav ul li:hover{
+    background-color: #383838;
+}
+
+ul.sub-nav{
+    position: absolute;
+    background-color: #383838;
+    list-style-type: none;
+    width: 225px;
+    padding-left: 0px;
+    padding-top: 5px;
+    margin-left: -25px;
+    opacity: 0;
+}
+
+ul.sub-nav li{
+    padding-left: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.nav ul li:hover .sub-nav{
+    opacity: 1;
+}
+
+/* End of navigation test */
 ul{
     margin: 0;
     padding: 0;
