--- a/src/main/resources/templates/movieList.html
+++ b/src/main/resources/templates/movieList.html
@@ -7,6 +7,26 @@
 <body>
 <div th:replace="mainPage :: header"></div>
 <!--<div class="container">-->
+
+<div class="container">
+
+    <form th:action="@{/findMovieByTitle}" method="get">
+        <input id="searchMovie" type="text" name="movieTitle" placeholder="Wpisz tekst">
+        <button for="searchMovie">Szukaj</button>
+    </form>
+
+    <form th:action="@{'/sort'}" method="get">
+        <input name="asc" th:value="true" hidden>
+        <input type="submit" th:value="A-Z"></input>
+    </form>
+
+    <form th:action="@{'/sort'}" method="get">
+        <input name="asc" th:value="false" hidden>
+        <input type="submit" th:value="Z-A"></input>
+    </form>
+
+</div>
+
 <div class="row col-md-offset-1 col-md-10">
     <div class="row table-header">
         <div class="col-md-1">Id</div>
@@ -17,8 +37,8 @@
         <div class="col-md-1">Gatunek</div>
         <div class="col-md-1">Kategoria wiekowa</div>
         <div class="col-md-2">
-        <div class="col-md-6">Edytuj</div>
-        <div class="col-md-6">Usun</div>
+            <div class="col-md-6">Edytuj</div>
+            <div class="col-md-6">Usun</div>
         </div>
     </div>
     <div class="row table-row" th:each="movie : ${movieList}">
@@ -30,8 +50,8 @@
         <div class="col-md-1"><p th:text="${movie.getFilmGenre()}"></p></div>
         <div class="col-md-1"><p th:text="${movie.getAgeRating()}"></p></div>
         <div class="col-md-2">
-        <div class="col-md-6"><a th:href="@{'/updateMovie/' + ${movie.getMovieId()}}">Edytuj</a></div>
-        <div class="col-md-6"><a th:href="@{'/deleteMovie/' + ${movie.getMovieId()}}">Usun</a></div>
+            <div class="col-md-6"><a th:href="@{'/updateMovie/' + ${movie.getMovieId()}}">Edytuj</a></div>
+            <div class="col-md-6"><a th:href="@{'/deleteMovie/' + ${movie.getMovieId()}}">Usun</a></div>
         </div>
     </div>
 </div>
