--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,18 +10,19 @@
 <div class="container">
 
     <form th:action="@{/login}" method="post"> <!-- @ to wysyla na a $ to zmienna -->
-        <div>
-            <div>
+        <div >
+            <div >
                 <label for="username">Nazwa uzytkownika:</label>
             </div>
-            <div>
+            <div >
                 <input id="username" type="text" name="username" placeholder="Nazwa uzytkownika">
             </div>
-
-            <div>
+        </div>
+        <div>
+            <div >
                 <label for="password">Haslo:</label>
             </div>
-            <div>
+            <div >
                 <input id="password" type="password" name="password" placeholder="Haslo">
             </div>
         </div>
@@ -33,8 +34,8 @@
         </div>
 -->
         <div class="row">
-            <div class="col-md-offset-3 col-md-9">
-                <input class="form-control" type="submit" value="Zaloguj">
+            <div class="col-md-9">
+                <input type="submit" value="Zaloguj">
             </div>
         </div>
     </form>
