--- a/src/main/resources/templates/addAppUser.html
+++ b/src/main/resources/templates/addAppUser.html
@@ -8,7 +8,7 @@
 <div th:replace="mainPage :: header"></div>
 <div class="container">
 
-        <form th:action="@{/addAppUser}" th:object="${appUserDTO}" method="post"> <!-- @ to wysyla na a $ to zmienna -->
+        <form th:action="@{/addAppUser}" th:object="${appUserDTO}" method="post">
             <div>
                 <div>
                     <label for="username">Nazwa uzytkownika:</label>
